=============

NEW FEATURES

  o New argument 'convolve' in aggregateDist() to convolve the
    distribution obtained with the recursive method a number of times
    with itself. This is used for large portfolios where the expected
    number of claims is so large that recursions cannot start.
    Dividing the frequency parameter by 2^n and convolving n times can
    solve the problem.

  o Since the terminolgy Tail Value-at-Risk is often used instead of
    Conditional Tail Expectation, TVaR() is now an alias for CTE().

BUG FIXES

  o cm() returned the internal classification codes instead of the
    original ones for hierarchical models. (Thanks to Zachary Martin
    for the heads up.)


Version 1.0-2
=============

USER-VISIBLE CHANGES

  o Functions m<foo>() and lev<foo>() now return Inf instead of NaN
    for infinite moments. (Thanks to David Humke for the idea.)

BUG FIXES

  o Non-ascii characters in one R source file prevented compilation of
    the package in a C locale (at least on OS X).

  o For probability laws that have a strictly positive mode or a mode
    at zero depending on the value of one or more shape parameters,
    d<foo>(0, ...) did not handle correctly the case exactly at the
    boundary condition. (Thanks to Stephen L <bulls22eye@gmail.com>
    for the catch.)


Version 1.0-1
=============

USER-VISIBLE CHANGES

  o levinvpareto() works for order > -shape and defaults to order
    = 1, like all other lev<foo>() functions.

BUG FIXES

  o Functions d<foo>() handle the case x == 0 correctly.

  o Functions q<foo>() return NaN instead of an error when
    argument p is outside [0, 1] (as in R).

  o Functions r<foo>() for three parameter distributions (e.g. Burr)
    no longer wrongly display the "NaNs produced" warning message.

  o The warning message "NaNs produced" was not (and could not be)
    translated.

  o Function levinvpareto() computes limited moments for order >
    -shape using numerical integration.


Version 1.0-0